LOW / get access to XML library on java 9 for tests