@@ -15,4 +15,7 @@ if (JavaVersion.current().isJava9Compatible()) {
 	tasks.withType(JavaCompile) {
 		options.compilerArgs.addAll(['--add-modules', 'java.xml.bind'])
     }
+	tasks.withType(Test) {
+		jvmArgs += ['--add-modules', 'java.xml.bind']
+    }
 }  
