@@ -13,3 +13,8 @@ dependencies {
   testRuntime project(':docxconnector-test-rc')
     
 }
+if (JavaVersion.current().isJava9Compatible()) {
+	tasks.withType(Test) {
+		jvmArgs += ['--add-modules', 'java.xml.bind']
+    }
+}  
